--- a/package.json
+++ b/package.json
@@ -9,13 +9,15 @@
     "lint": "next lint"
   },
   "dependencies": {
+    "axios": "^1.7.7",
     "formik": "^2.4.6",
     "my-app": "file:",
     "next": "15.0.1",
     "react": "19.0.0-rc-69d4b800-20241021",
     "react-dom": "19.0.0-rc-69d4b800-20241021",
     "react-icons": "^5.3.0",
-    "sass": "^1.80.4"
+    "sass": "^1.80.4",
+    "yup": "^1.4.0"
   },
   "devDependencies": {
     "@types/node": "^20",
